# PapyrusProfiler

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Debug.ppj  LICENSE  PapyrusProfiler.code-workspace  README.md  Release.ppj  vcpkg-configuration.json  vcpkg.json
cmake/: version.h.in  version.rc.in
contrib/Distribution/PapyrusSources/: PapyrusProfilerFunctions.psc  PapyrusProfilerQuestScript.psc
contrib/Distribution/ProfilingConfigs/: FixedCalls_20K_Config.json  FixedCalls_Skip30K_Profile50K_Config.json  OnHit_Config.json  OnItemAddedRemoved_Config.json  ProfileForeverWriteRealtime.json  Skip30sec_Profile5min.json
include/: Papyrus.h  ProfilingConfig.h  ProfilingHook.h  Settings.h  tojson.hpp  version.h
src/: Main.cpp  PCH.h  Papyrus.cpp  ProfilingConfig.cpp  ProfilingHook.cpp  Settings.cpp
